--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -26,7 +26,7 @@
 
     @include for-tablet-big {
       flex-direction: column-reverse;
-      gap: 93px;
+      gap: unset;
     }
   }
 }
