--- a/src/styles/pages/_sign-in.scss
+++ b/src/styles/pages/_sign-in.scss
@@ -14,20 +14,23 @@
 
     @include for-tablet-big {
       flex-direction: column-reverse;
-      gap: 40px;
+      gap: unset;
     }
 
     @include for-phone {
       padding-top: 11px;
-      gap: 16px;
     }
   }
 
   &__footer {
     margin-top: 70px;
 
+    @include for-tablet-big {
+      margin-top: 40px;
+    }
+
     @include for-phone {
-      margin-top: unset;
+      margin-top: 16px;
     }
   }
 
